=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.96

   * pdb1 extension support

   * fixed unintentional default OpenGL bug reporting 

Changes up to 0.95

   * changed cartoon_tube_radius to a more aestically pleasing 0.5A

   * ribbon now shows nuc. acid backbone too

   * added presets for ligand sites, including our new surface reps.

   * fixed bug with scene coloring

   * adjusted clipping plane bounds to eliminate shingle effect from
     excessive depth ranges.

   * mesh_normals setting for surface_type 2

   * launch option: -P # enables multisampling on Macs & Windows.
     NOTE: on Windows, only "-P 4" works, and only tested on ATI cards.

   * session_migration setting

   * fixed problem with view matrix exploding on some proteins -- now
     allow front clipping plane to go negative with suitable safeguards

   * fixed bug with raytracing transparent surfaces using intermediate 
     backgrounds

   * surface code now tolerates superimposed identical atoms more gracefully

   * dot_normals setting

   * bound_to selection operator now complements neighbor...

   * fixed stereo opengl bug & improved opengl debugging capability

   * extended editor to support multiple picked atoms in different objects

   * fixed major bug in mesh representation

   * updated setup.py

   * surface_type setting:  0 = solid, 1 = dot, 2 = mesh

   * fixed off-center behavior of center command with respect to clipping planes

   * fixed label representation memory (on/off only) in scenes

   * added support for explicit RESN and RESI specification in selection 
     macros: RESN`RESI/, RESN`/, `RESI/ vs semi-ambiguous RESN/ or RESI/

   * fixed nonbonded detection problem with discrete objects

   * fixed serious bug with "state" selection operator and discrete objects.

   * improved ray-tracer's ability to handle multiple transparent objects